Fix horizontal scroll issue in team's page and adjust team picture's frame

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,8 +297,8 @@ p {
   }
 
   .team img {
-    width: 250px;
-    height: 250px;
+    width: 280px;
+    height: 280px;
     border-radius:50% ;
   }
 
